bk_ida/gccida/c1/gen_subprogram_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/dwarf2out.c:10644:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/dwarf2out.c:10657:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/dwarf2out.c:10701:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/dwarf2out.c:10749:41: error: use of undeclared identifier 'off_629E39'
sprintf( v22, "*.%s%u", ( const char *)&off_629E39, current_funcdef_number); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/dwarf2out.c:10762:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
